# Mosaic-Culture

./: .gitignore  .replit  README.md  app.py  database.py  extensions.py  main.py  models.py  pyproject.toml  replit.nix  test_server.py
attached_assets/: Pasted--18-Story-Sharing-Feature-Description-Allow-users-to-share-their-favorite-stories-im-1736502908162.txt  Pasted-Here-s-a-clear-and-actionable-prompt-for-Replit-Whisperer-to-address-the-error-Prom-1736506286386.txt  Pasted-Here-s-a-clear-and-effective-prompt-to-direct-Replit-Whisperer-to-add-a-delete-story-featu-1736552329250.txt  Pasted-Here-s-a-clear-and-structured-prompt-for-Replit-Whisperer-to-implement-a-Share-Stories-to-Soci-1736508049931.txt  Pasted-Here-s-a-combined-prompt-for-Replit-Whisperer-to-fix-both-the-Submit-Story-button-navigation--1736549841515.txt  Pasted-Here-s-a-focused-prompt-to-guide-Replit-in-ensuring-the-image-generation-and-video-generat-1736499288591.txt  Pasted-Here-s-a-perfect-prompt-designed-to-guide-Replit-expertly-in-developing-the-Mosaic-Culture-a-1736491621848.txt  Pasted-Here-s-a-precise-and-actionable-prompt-for-Replit-Whisperer-to-debug-and-fix-the-404-Not-Found-1736540558081.txt  Pasted-Here-s-a-precise-and-actionable-prompt-for-Replit-Whisperer-to-debug-and-fix-the-Error-Missin-1736542555889.txt  Pasted-Here-s-a-refined-troubleshooting-prompt-to-guide-Replit-in-addressing-why-the-page-navigates-to--1736496411264.txt  Pasted-Here-s-a-rewritten-prompt-for-your-request-Prompt-for-Replit-Implement-Video-Generatio-1736505684341.txt  (+23 more)
services/: __init__.py  audio_service.py  (+12 more)
(+13 files in other folders)
