[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.37",
    "werkzeug>=3.1.3",
    "trafilatura>=2.0.0",
    "openai>=1.59.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "cloudinary>=1.42.1",
    "elevenlabs>=1.50.3",
    "flask-caching>=2.3.0",
    "google-cloud-texttospeech>=2.23.0",
]
